# TheclApp-Backend

./: .gitignore  README.md  actual_data.py  add_condition_type_column.py  alembic.ini  cardiac_table_check.py  check_burn_care_entries.py  check_existing_users.py  check_gynecologic_mixup.py  check_health_progress.py  check_model_content.py  check_raw.py  check_router_content.py  check_router_issues.py  check_schema.py  check_tables.py  clear_database.py  compare.py  correct_schemas.py  create_cancer_table.py  create_general_entry_table.py  create_kidney_table.py  create_prenatal_table.py  create_table.py  create_test.py  create_test_user.py  data_test.py  debug_database.py  diagnose.py  endegena.py  endpoint_test.py  extract.py  final_test.py  find_exact_mixup_point.py  find_patient_id.py  fix.py  force_table.py  get_your_token.py  health_data_debug.py  healthcare_diagnostic.py  (+30 more)
alembic/: env.py
alembic/versions/: 4d830a281d39_add_prescriptions_table.py  623c30ce9e64_create_video_sessions_table.py  d2d4f83b623b_add_prescriptions_table.py  e957d7ffda4e_add_prescriptions_and_medical_records_.py
app/: ai_health_engine.py  config.py  create_db.py  database.py  database_base.py  dependencies.py  models.py  routes.py  schemas.py  security.py  seed.py
app/appointments/: _init_.py  appointments.py  models.py  routers.py  schemas.py
app/authentication/: auth.py  dependencies.py  init.py  models.py  routers.py  schemas.py  service.py
app/chatbot/: disclaimers.py  mental_health_bot.py  (+4 more)
config/: rbac.py  security.py
static/: staff-login.html
users/: user_service.py
(+116 files in other folders)
