[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.43"
passlib = {extras = ["bcrypt"], version="^1.7"}
pydantic = {version="^2.6", extras=["email"]}
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
langdetect = "^1.0.9"
openai = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "alembic (>=1.16.5,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]